# learning_courses

./: .gitignore  main.py  pyproject.toml
data/clean/: adobe_clean.csv  adobe_clean.parquet  paid_clean.csv  paid_clean.parquet  unified_daily.csv  unified_daily.parquet
data/raw/: funnel_data.csv  growth_data.csv
notebooks/advanced_python_course/: 00_course_index.ipynb  01_pythonic_code_data_model.ipynb  02_closures_decorators.ipynb  03_iterators_generators.ipynb  04_context_managers.ipynb  05_descriptors_metaclasses.ipynb  06_threading_gil.ipynb  07_async_programming.ipynb  08_memory_performance.ipynb  09_type_system.ipynb  10_testing_design_patterns.ipynb  11_packaging_tooling.ipynb  12_cpython_internals.ipynb
notebooks/causal_experimentation_course/: 00_course_index.ipynb  01_ab_testing_fundamentals.ipynb  02_randomization_methods.ipynb  03_power_analysis.ipynb  04_primary_secondary_metrics.ipynb  05_guardrail_metrics.ipynb  06_sample_ratio_mismatch.ipynb  07_multiple_testing.ipynb  08_peeking_sequential_risk.ipynb  09_segmentation_heterogeneity.ipynb  10_uplift_holdouts.ipynb  11_did_business.ipynb  12_regression_discontinuity_business.ipynb  13_matching_business.ipynb  14_fixed_effects_panel.ipynb  15_event_study.ipynb  16_synthetic_control_business.ipynb  17_instrumental_variables_business.ipynb  18_uplift_modeling.ipynb  19_heterogeneous_treatment_effects.ipynb  20_causal_forests.ipynb  21_double_machine_learning.ipynb  (+2 more)
src/: dash_growth_app.py  data_loader.py  funnel_dashboard.py  generate_data.py  generate_funnel_data.py  growth_dashboard.py
(+201 files in other folders)
